--- a/css/class-list.css
+++ b/css/class-list.css
@@ -87,6 +87,7 @@ nav a {
     padding: 5px 10px;
     border-radius: 5px;
     text-transform: capitalize;
+    font-size: 15px;
 }
 
 .class-list-btn:hover {
@@ -97,6 +98,7 @@ nav a {
     width: 100%;
     border-collapse: collapse;
     margin-top: 15px;
+    overflow-y: auto;
 }
 
 .class-list-table th,
@@ -114,13 +116,24 @@ nav a {
     display: none;
 }
 
-.overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: none;
-    z-index: 9999;
-}
+.scrollable {
+    height: 200px;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: #ccc #f0f0f0;
+  }
+  
+.scrollable::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+.scrollable::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 10px;
+  }
+
+  .scrollable::-webkit-scrollbar-track {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+  }
