--- a/css/class-list.css
+++ b/css/class-list.css
@@ -1,7 +1,7 @@
 :root {
-    --primary-color: #4CAF50;
+    --primary-color: #5aa55c;
     --secondary-color: #4CAF50;
-    --background-color: #e6e6e6;
+    --background-color: #fff;
     --border-color: #ddd;
     --shadow-color: rgba(0, 0, 0, 0.1);
 }
@@ -10,7 +10,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'ubuntu';
 }
 
 body
@@ -21,7 +21,7 @@ body
 header,
 nav {
     padding: 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: #eeeeee;
 }
 
@@ -115,25 +115,3 @@ nav a {
 .hidden {
     display: none;
 }
-
-.scrollable {
-    height: 200px;
-    overflow-y: auto;
-    scrollbar-width: thin;
-    scrollbar-color: #ccc #f0f0f0;
-  }
-  
-.scrollable::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-  
-.scrollable::-webkit-scrollbar-thumb {
-    background-color: #ccc;
-    border-radius: 10px;
-  }
-
-  .scrollable::-webkit-scrollbar-track {
-    background-color: #f0f0f0;
-    border-radius: 10px;
-  }
