--- a/css/style-register.css
+++ b/css/style-register.css
@@ -1,31 +1,30 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-body {
+  }
+  
+  body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #f5f5f5;
-}
-
-#logo-web {
+  }
+  
+  #logo-web {
     border-radius: 50%;
     margin: 25px;
     box-shadow: 0px 0px 10px rgba(40, 107, 49, 0.719);
-}
-
-#register-form
-{
+  }
+  
+  #register-form {
     display: flex;
     flex-direction: column;
     width: max-content;
-}
-
-.container {
+  }
+  
+ .container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,43 +32,70 @@ body {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-}
-
-.container h1 {
+  }
+  
+ .container h1 {
     margin-bottom: 20px;
-}
-
-.container label {
+  }
+  
+ .container label {
     display: block;
     margin-bottom: 5px;
-}
-
-.container input[type="text"],
-.container input[type="email"],
-.container input[type="password"] {
+  }
+  
+ .container input[type="text"],
+ .container input[type="email"],
+ .container input[type="password"] {
     width: 300px;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-.container #password-strength {
-    margin-bottom: 10px;
-    height: 20px;
-}
-
-.container .error {
+  }
+  
+ .strength-meter {
+    position: relative;
+    width: 250px;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    display: none;
+  }
+  
+ .strength-meter.title {
+    font-size: 14px;
+    font-weight: bold;
+    color: #777;
+    line-height: 20px;
+  }
+  
+ .strength-bar-wrapper {
+    width: 100%;
+    height: 3px;
+    background-color: #e9e9e9;
+    border-radius: 3px;
+  }
+  
+  #strength-bar {
+    width: 0;
+    height: 3px;
+    margin-top: 10px;
+    transition: width 0.2s;
+    border-radius: 3px;
+  }
+  
+ .container.error {
     color: red;
     margin-top: 5px;
-}
-
-.container .success {
+  }
+  
+ .container.success {
     color: green;
     margin-top: 10px;
-}
-
-.container button[type="submit"] {
+  }
+  
+ .container button[type="submit"] {
     width: 100%;
     padding: 10px;
     background-color: #4CAF50;
@@ -79,19 +105,25 @@ body {
     cursor: pointer;
     margin-top: 20px;
     font-size: 17px;
-}
-
-.container button[type="submit"]:hover {
+  }
+  
+ .container button[type="submit"]:hover {
     background-color: #45a049;
-}
-
-#link-login
-{
+  }
+  
+  #link-login {
     text-decoration: none;
     color: #007a07;
     font-weight: bolder;
-}
-#link-login:hover
-{
+  }
+  
+  #link-login:hover {
     text-decoration: underline;
-}
+  }
+  
+  
+  i {
+    font-style: normal;
+    color: red;
+    font-weight: bold;
+  }
