--- a/css/dashboard-faculty.css
+++ b/css/dashboard-faculty.css
@@ -21,6 +21,23 @@ body
     color: #ffffff;
 }
 
+.topnav{
+    padding-left: 50px;
+}
+
+.topnav a{
+    padding: 0px 10px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+}
+
+.active {
+    font-weight: 500;
+    border-bottom: 2px solid;
+    
+}
+
 .title-container {
     display: flex;
     flex-direction: column;
