--- a/css/profile.css
+++ b/css/profile.css
@@ -1,3 +1,16 @@
+:root {
+    --primary-color: #5aa55c;
+    --secondary-color: #4CAF50;
+    --background-color: #fff;
+    --border-color: #ddd;
+    --shadow-color: rgba(0, 0, 0, 0.1);
+}
+
+body
+{
+    background: var(--primary-color);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +19,7 @@
 }
 
 header {
-    color: white;
+    background: white;
     height: 100px;
     line-height: 100px;
     border-bottom: 1px solid #CCD1D1;
@@ -45,6 +58,7 @@ aside{
     height: 100vh;
     float: left;
     display: block;
+    background: white;
 }
 
 aside a{
@@ -84,9 +98,10 @@ aside h1{
     text-decoration: none;
 }
 
-main{
-    display:block;
-    float: left;
+main {
+    display: flex;
+    flex-direction: column;
+    margin-left: 500px;
 }
 
 img{
@@ -125,9 +140,11 @@ img{
 .border {
     border: 1px solid #D6DBDF;
     border-radius: 10px;
-    margin: 50px;
+    margin: 15px;
     padding: 40px 70px;
-    width: 1070px;
+    width: 1000px;
+    box-shadow: 0 0 10px var(--shadow-color);
+    background-color: var(--background-color);
 }
 
 .mainheading{
