--- a/css/style-login.css
+++ b/css/style-login.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #6fb671;
 }
 
 img#logo-web
@@ -61,14 +61,14 @@ input[type="password"] {
 }
 
 button {
-    width: 300px;
+    width: 100%;
     padding: 10px;
     background-color: #4d8a4f;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin: 5px;
+    margin: 0 0 10px;
     font-size: 17px;
 }
 
