--- a/css/dashboard-student.css
+++ b/css/dashboard-student.css
@@ -140,8 +140,7 @@ button{
 
 .main-container {
     display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
+    align-items: center;
     justify-content: center;
     padding: 20px;
 }
@@ -164,6 +163,12 @@ button{
 {
     display: flex;
     justify-content: space-between;
+}
+
+.container1
+{
+    display: flex;
+    flex-direction: column;
 }
 /*calendar*/
 .wrapper {
