--- a/css/grades.css
+++ b/css/grades.css
@@ -15,72 +15,132 @@
 
 body
 {
-    background: var(--primary-color);
+    background: #7C9F6F;
 }
 
 header {
-    background: var(--background-color);
-    height: 100px;
-    line-height: 100px;
+    height: 75px;
+    line-height: 75px;
     border-bottom: 1px solid #CCD1D1;
-    position: sticky;
+    position: fixed;
     z-index: 9999;
+    width: 100%;
+    background: white;
 }
 
 header h1{
-    padding-left: 25px;
+    padding-left: 55px;
     float:left;
     padding-right: 60px;
     color: #7C9F6F;
 }
 
-.topnav{
-    padding-left: 50px;
-    font-size: 18px;
+header div{
+    padding-left: 1.5rem;
 }
 
-.topnav a{
-    padding: 0px 10px;
-    text-decoration: none;
-    color: grey;
-    font-size: 15px;
+header i{
+    padding-left: 15px;
 }
 
 .active {
-    font-weight: 500;
-    border-bottom: 2px solid;
+    background-color: #ddd;
+    width: 100%;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
-img{
-    border-radius: 50%;
-    border: 6px solid #7C9F6F;
-    padding: 2px;
+
+
+
+
+
+.menu-toggle {
+    display: none;
 }
 
-.container{
-    display:flex;
-    justify-content: space-between;
+.menu-button {
+    position: absolute;
+    left: 1rem;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: inline-block;
+    color: gray;
 }
 
-.top{
-    padding-bottom: 25px;
+.aside-menu {
+    position: fixed;
+    left: -250px;
+    width: 250px;
+    height: 100%;
+    background: var(--background-color);
+    color: white;
+    overflow-y: auto;
+    transition: left 0.3s ease;
+    padding-top: 75px;
 }
 
-.heading{
+.aside-menu ul{
+    list-style: none;
+    padding: 0;
+}
+
+.aside-menu li{
+    margin: 1rem 0;
     padding-bottom: 10px;
 }
 
-#head-sidenav{
+.aside-menu a{
+    padding: 9px 90px 9px 20px;
     text-decoration: none;
-    color: #000;
+    color: grey;
+    font-size: .9rem;
 }
 
-.main-container {
-    display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
-    justify-content: center;
-    padding: 20px;
+.aside-menu i{
+    padding-right: 30px;
+    padding-left: 10px;
+}
+
+.menu-toggle:checked ~ .aside-menu {
+    left: 0;
+}
+
+.menu-toggle:checked ~ main {
+    margin-left: 250px;
+}
+
+.close-button {
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: inline-block;
+}
+
+.aside-menu nav{
+    border-bottom: solid 1px #CCD1D1;
+}
+
+
+
+
+
+
+main {
+    display:block;
+    float: left;
+    padding-top: 75px;
+    transition: margin-left 0.3s ease;
+}
+
+.card-container {
+    padding: 50px 0px 0px 255px;
 }
 
 .card {
@@ -157,7 +217,7 @@ img{
 }
 
 .class-list-table th {
-    background-color: var(--primary-color);
+    background-color: #7C9F6F;
     color: #fff;
 }
 
@@ -176,13 +236,13 @@ img{
 }
 
 .class-list-table th {
-    background-color: var(--primary-color);
+    background-color: #7C9F6F;
     color: #fff;
 }
 
 .class-list-btn {
     cursor: pointer;
-    background-color: var(--primary-color);
+    background-color: #7C9F6F;
     color: #fff;
     border: none;
     padding: 5px 10px;
