Co-authored-by: tristanacosta1 <tristanacosta1@users.noreply.github.com>

--- a/css/dashboard-student.css
+++ b/css/dashboard-student.css
@@ -126,11 +126,6 @@ header i{
     border-bottom: solid 1px #CCD1D1;
 }
 
-
-
-
-
-
 main{
     display:block;
     float: left;
@@ -145,13 +140,18 @@ main{
     justify-content: center;
     padding: 2rem;
 }
-
+.subject-container a
+{
+    text-decoration: none;
+}
 .subject-card {
     background: var(--background-color);
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
     width: 200px;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
 }
