--- a/patch 1.1/css/faculty.css
+++ b/patch 1.1/css/faculty.css
@@ -43,7 +43,14 @@ header
 {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 15px;
+    padding-right: 50px;
+}
+.header-right img
+{
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid var(--border-color);
 }
 .logo-name
 {
@@ -53,7 +60,7 @@ header
 }
 aside
 {
-    position: absolute;
+    position: fixed;
     margin-top: 70px;
     height: 100%;
     width: 250px;
@@ -120,15 +127,6 @@ aside
 {
     cursor: pointer;
 }
-.menu-toggle {
-    display: none;
-}
-.menu-toggle:checked ~ .aside-menu {
-    left: 0;
-}
-.menu-toggle:checked ~ main {
-    margin-left: 250px;
-}
 main {
     display:block;
     margin-left: 250px;
@@ -156,12 +154,24 @@ main {
     text-align: center;
     transition: transform 0.3s, box-shadow 0.3s;
 }
-
+#toggle-group
+{
+    display: none;
+}
+#toggle-group.visible
+{
+    display: block;
+}
 .subject-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
-
+.subject-meta
+{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 12px;
+}
 .subject-title {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
@@ -285,4 +295,64 @@ nav a
     background: transparent;
     border: transparent;
     color: rgb(255, 255, 255);
+}
+.class-meta .record:hover, .folder:hover, .settings:hover
+{
+    background-color: rgba(128, 128, 128, 0.123);
+    border-radius: 50%;
+}
+.post-meta
+{
+    display: flex;
+    justify-content: space-between;
+}
+.post-img
+{
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid var(--border-color);
+}
+.main-container
+{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.dropdown-class
+{
+    text-align: center;
+    margin-top: 50px;
+    height: 50px;
+    width: 400px;
+    font-size: 22px;
+}
+.in-progress
+{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.task
+{
+    display: flex;
+    align-items: center;
+}
+.task-info
+{
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+}
+.task-meta
+{
+    display: flex;
+    flex-direction: column;
+    margin-left: 35px;
+}
+.opt
+{
+    margin-left: 20px;
+    font-size: 25px;
+    cursor: pointer;
 }
