--- a/patch 1.1/css/faculty.css
+++ b/patch 1.1/css/faculty.css
@@ -355,11 +355,23 @@ nav a
 {
     display: flex;
     align-items: center;
+    width: 700px;
+    justify-content: space-between;
+    color: #444444;
+    background-color: #c5e6a3;
+    padding: 0 20px;
+}
+.task:hover
+{
+    background-color: #c5fa80;
+    box-shadow: 0 2px 5px var(--shadow-color);
 }
 .task-info
 {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 5px;
     margin-left: 15px;
 }
 .code
@@ -404,5 +416,23 @@ nav a
 }
 .announcement:hover
 {
-
+    background-color: #f0f0f0;  
+}
+.topic-meta
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+    font-size: 22px;
+}
+.topic-meta h2
+{
+    font-weight: 400;
+}
+.task-type, .deadline
+{
+    font-size: 14px;
 }
