--- a/patch 1.1/css/faculty.css
+++ b/patch 1.1/css/faculty.css
@@ -155,10 +155,12 @@ main {
 #toggle-group
 {
     display: none;
+    transition: all 0.3s ease;
 }
 #toggle-group.visible
 {
     display: block;
+    transition: all 0.3s ease;
 }
 .sub-img:hover {
     transform: translateY(-5px);
@@ -175,6 +177,10 @@ main {
     text-align: left;
     color: #dbdbdb;
     font-size: 12px;
+}
+li
+{
+    list-style-type: none;
 }
 .sub-img
 {
@@ -207,6 +213,10 @@ main {
 .active .link-class
 {
     color: #d6d6d6;
+}
+.link-1
+{
+    color: gray;
 }
 nav
 {
@@ -360,6 +370,7 @@ nav a
     color: #444444;
     background-color: #c5e6a3;
     padding: 0 20px;
+    cursor: pointer;
 }
 .task:hover
 {
@@ -435,4 +446,140 @@ nav a
 .task-type, .deadline
 {
     font-size: 14px;
+}
+.btn-create
+{
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: transparent;
+    background-color: rgb(113, 160, 51);
+}
+.base
+{
+    display: flex;
+    gap: 1rem;
+}
+.right
+{
+    width: 500px;
+    border-bottom: 1px solid gray;
+}
+.card-R
+{
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.box
+{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+.input-box
+{
+    border-radius: 10px;
+    border: 2px solid var(--border-color);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
+}
+.input-box input[type=text]
+{
+    border: none;
+    width: 100%;
+    padding: 10px 20px;
+    font-size: 14px;
+}
+.input-box input[type=text]:focus
+{
+    border: none;
+}
+.input-box input[type=submit]
+{
+    border: none;
+    text-align: right;
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+table,
+td,
+th {
+    border: 1px solid #ddd;
+    text-align: left;
+
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: auto;
+    margin-top: 50px;
+    background-color: #fff;
+}
+
+th,
+td {
+padding: 15px;
+text-align: center;
+}
+
+tr > th {
+background-color: rgb(113, 160, 51);
+color: white;
+}
+
+.studentData{
+    width: 100%;
+    background-color: rgb(20, 78, 20);
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+}
+#form1{
+    margin: auto;
+    width: 80%;
+    
+}
+#form1 input{
+    padding: 10px ;
+    margin-right: 15px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+#form1 input:focus{
+    outline: none;
+}
+
+.td6{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+.td6 > button{
+    margin-right: 10px;
+    color: white;
+    border-radius: 5px;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+} 
+
+.td6 > button:nth-child(1){
+    background-color: green;
+}
+.td6 > button:nth-child(2){
+    background-color: red;
+}
+
+#absent{
+    background-color: red;
 }
