--- a/profile/css/profile.css
+++ b/profile/css/profile.css
@@ -8,7 +8,7 @@
 
 body
 {
-    background: #7C9F6F;
+    background: var(--secondary-color);
 }
 
 * {
@@ -32,7 +32,7 @@ header h1{
     padding-left: 55px;
     float:left;
     padding-right: 60px;
-    color: #7C9F6F;
+    color: var(--primary-color);
 }
 
 header div{
@@ -126,8 +126,9 @@ header i{
 }
 
 main {
-    display:block;
-    float: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 2rem;
     transition: margin-left 0.3s ease;
     padding-top: 75px;
@@ -139,7 +140,7 @@ main {
 
 img{
     border-radius: 50%;
-    border: 6px solid #7C9F6F;
+    border: 6px solid var(--primary-color);
     padding: 2px;
 }
 
@@ -212,8 +213,8 @@ button  {
     float: right;
     padding: 10px 20px;
     border-radius: 20px;
-    border: 1px solid #7C9F6F;
-    background-color: #7C9F6F;
+    border: 1px solid var(--primary-color);
+    background-color: var(--primary-color);
     color: white;
     cursor: pointer;
 }
