adjusted design and removed unnecessary functions

--- a/patch 1.1/css/faculty.css
+++ b/patch 1.1/css/faculty.css
@@ -351,9 +351,10 @@ nav a
 {
     text-align: center;
     margin-top: 50px;
-    height: 50px;
+    height: 33px;
     width: 400px;
-    font-size: 22px;
+    font-size: 18px;
+    font-weight: 300;
 }
 .in-progress
 {
@@ -368,9 +369,16 @@ nav a
     width: 700px;
     justify-content: space-between;
     color: #444444;
-    background-color: #c5e6a3;
-    padding: 0 20px;
+    background-color: #e7fad4;
+    padding: 10px 20px;
     cursor: pointer;
+    border-radius: 10px;
+}
+.task-meta-1
+{
+    display: flex;
+    align-items: center;
+    gap: 7px;
 }
 .task:hover
 {
@@ -381,9 +389,12 @@ nav a
 {
     display: flex;
     align-items: center;
-    gap: 10px;
-    padding: 5px;
-    margin-left: 15px;
+    font-size: 14px;
+}
+.task-submitted, .task-marked
+{
+    font-weight: 500;
+    font-size: 22px;
 }
 .code
 {
@@ -392,8 +403,8 @@ nav a
 .task-meta
 {
     display: flex;
+    align-items: center;
     flex-direction: column;
-    margin-left: 35px;
 }
 .opt
 {
@@ -453,7 +464,23 @@ nav a
     padding: 10px 20px;
     font-size: 16px;
     border: transparent;
-    background-color: rgb(113, 160, 51);
+    background-color: rgb(69, 114, 69);
+    color: #fff;
+    border: 1px solid #ffffff;
+}
+.task-desc
+{
+    font-size: 14px;
+}
+.task-instructions
+{
+    padding: 20px 0px;
+}
+.btn-create:hover
+{
+    cursor: pointer;
+    background-color: rgb(135, 179, 78);
+    box-shadow: 0 2px 5px var(--shadow-color);
 }
 .base
 {
@@ -543,18 +570,28 @@ color: white;
 #form1{
     margin: auto;
     width: 80%;
-    
+    display: flex;
+    justify-content: center;
+    gap: 15px;
 }
 #form1 input{
     padding: 10px ;
-    margin-right: 15px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
     border-radius: 5px;
+    font-size: 15px;
 }
 #form1 input:focus{
     outline: none;
+}
+.btn
+{
+    background-color: rgb(113, 160, 51);
+    color: white;
+    padding: 10px 20px;
+    font-weight: 500;
+    font-size: 18px;
 }
 
 .td6{
@@ -579,7 +616,71 @@ color: white;
 .td6 > button:nth-child(2){
     background-color: red;
 }
-
 #absent{
     background-color: red;
+}
+.card-container
+{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+}
+.card-title
+{
+    color: #ddd;
+}
+.class-list-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    overflow-y: auto;
+}
+
+.class-list-table th,
+.class-list-table td {
+    padding: 10px;
+    border-bottom: 1px solid var(--border-color);
+    text-align: center;
+}
+
+.class-list-table th {
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+
+.class-list-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+    overflow-y: auto;
+}
+
+.class-list-table th,
+.class-list-table td {
+    padding: 10px;
+    border-bottom: 1px solid var(--border-color);
+    text-align: center;
+}
+
+.class-list-table td input
+{
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.class-list-table th {
+    background-color: var(--secondary-color);
+    color: #fff;
+}
+.class-list-btn {
+    cursor: pointer;
+    background-color: var(--secondary-color);
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-transform: capitalize;
+    font-size: 15px;
 }
