--- a/profile/css/dashboard-student.css
+++ b/profile/css/dashboard-student.css
@@ -50,10 +50,88 @@ header i{
     border-bottom-right-radius: 20px;
 }
 
-
-
-
-
+.subject-meta
+{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 12px;
+}
+.subid, .professor
+{
+    text-align: left;
+    color: #dbdbdb;
+    font-size: 12px;
+}
+li
+{
+    list-style-type: none;
+}
+.link
+{
+    color: var(--primary-color);
+}
+.opt
+{
+    margin-left: 20px;
+    font-size: 25px;
+    cursor: pointer;
+}
+.act-meta
+{
+    text-align: left;
+    font-size: 14px;
+    margin-top: 1.5rem;
+    padding-bottom: 5px;
+}
+.act-dl
+{
+    color: #858585;
+}
+.act-title
+{
+    padding: 10px;
+}
+.op
+{
+    font-weight: 500;
+}
+.subject-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: left;
+    padding: 2rem;
+}
+.subject-container a
+{
+    text-decoration: none;
+}
+.class-meta
+{
+    display: flex;
+    justify-content: right;
+    border-top: 1px solid var(--border-color);
+    padding-top: 5px;
+    gap: 10px;
+    padding: 10px 0 0 10px;
+}
+.active .link-class
+{
+    color: #d6d6d6;
+}
+.link-1
+{
+    color: gray;
+}
+.subject-card {
+    background-image: url(../images/bg-class.jpg);
+    background-size: cover;
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    margin: -1rem;
+    padding: 1rem;
+    flex-direction: column;
+}
 .menu-toggle {
     display: none;
 }
@@ -132,42 +210,31 @@ main{
     transition: margin-left 0.3s ease;
     padding-top: 75px;
 }
-
-.subject-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: center;
-    padding: 2rem;
-}
 .subject-container a
 {
     text-decoration: none;
-}
-.subject-card {
-    background: var(--background-color);
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
-    width: 200px;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.subject-card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
 .subject-title {
     font-size: 1.25rem;
     margin-bottom: 0.5rem;
-    color: #333;
+    color: #ffffff;
+    font-weight: 500;
 }
 
 .yrsec {
     font-size: 0.9rem;
     color: #666;
+}
+.sub-img
+{
+    background: var(--background-color);
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    padding: 1rem;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.sub-img:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
